@@ -12,7 +12,6 @@
                 width: 100px;
                 height: 100px;
                 vertical-align: top;
-                background-color: rgba(0, 0, 0, 0.16);
                 display: inline-block;
             }
             &:hover{
@@ -328,14 +327,14 @@
 }
 
 .information-container {
-    background-color: #fff;
+    background-color: #f7f7f7;
     width: 100%;
     position: relative;
 
     .information-container__empty {
         height: 300px;
         width: 100%;
-        background-color: rgba(0, 0, 0, .16);
+        background-color: #f7f7f7;
     }
 
     .swiper-container__image{
