@@ -80,20 +80,20 @@
 }
 
 .information-container {
-    background-color: #fff;
+    background-color: #f7f7f7;
     width: 100%;
     position: relative;
 
     .information-container__empty {
         height: 300px;
         width: 100%;
-        background-color: rgba(0, 0, 0, .08);
+        background-color: #f7f7f7;
     }
 
     .swiper-container__image{
         object-fit: cover;
         width: 100%;
-        height: 200px;
+        height: 300px;
         box-shadow: 0 0 3px #000;
         cursor: pointer;
         transition: transform ease .2s;
